grammar.js
    source_file: $ =>
      prec.left(
        repeat(
          choice(
            $.package,
            $.fragment,
            $._dollar,
          ),
        ),
      ),

    _line_terminator: $ => seq(optional('\r'), '\n'),

    fragment: $ =>
      prec.left(seq(repeat1(seq($._top_level_statement, $._line_terminator)), optional($._dollar))),

    _dollar: $ => token(seq('$', optional('\r'), '\n')),

    method: $ =>
      prec.left(
        seq(
          optional(alias(/_abstract/i, '_abstract')),
          optional(alias(/_private/i, '_private')),
          optional(alias(/_iter/i, '_iter')),
          alias(/_method/i, '_method'),
          field('exemplarname', $.identifier),
          choice(
            seq(
              '.', field('name', $.identifier),
              optional(choice(
                seq(
                  '(',
                  optional(seq($.argument, repeat(seq(',', $.argument)))),
                  optional(seq(optional(','), alias(/_optional/i, '_optional'), $._arguments)),
                  optional(seq(optional(','), alias(/_gather/i, '_gather'), $.argument)),
                  ')', optional(seq(choice('<<', '^<<'), $._arguments))),
                seq('[', optional($._arguments), ']', optional(seq(choice('<<', '^<<'), $._arguments))),
                seq(choice('<<', '^<<'), $._arguments),
              ))),
            seq('[', optional($._arguments), ']', optional(seq(choice('<<', '^<<'), $._arguments)))),
          $._line_terminator,
          optional($.documentation),
          optional($._codeblock),
          alias(/_endmethod/i, '_endmethod'),
        ),
      ),

    // [_iter] _proc [@ <identifier>] ( [ <arguments> ] )
    // <block body>
    // _endproc
    procedure: $ =>
      seq(optional(alias(/_iter/i, '_iter')), alias(/_proc/i, '_proc'),
        optional($.label),
        seq(
          '(',
          optional(seq($.argument, repeat(seq(',', $.argument)))),
          optional(seq(optional(','), alias(/_optional/i, '_optional'), $._arguments)),
          optional(seq(optional(','), alias(/_gather/i, '_gather'), $.argument)),
          ')', optional(seq(choice('<<', '^<<'), $._arguments)),
        ),
        optional($.documentation),
        optional($._codeblock),
        alias(/_endproc/i, '_endproc'),
      ),

    argument: $ => $._identifier,

    _arguments: $ => prec.right(seq($.argument, repeat(seq(',', $.argument)), optional(','))),

    // _block [ @ <identifier> ]
    //   <statements>
    //   [ >> <rvalue tuple> ]
    // _endblock
    block: $ =>
      prec.left(
        seq(alias(/_block/i, '_block'), optional($.label), optional($._codeblock), alias(/_endblock/i, '_endblock')),
      ),

    assignment: $ =>
      prec.left(PREC.ASSIGN,
        seq($._expression,
          choice('<<', '^<<', '_and<<', '_andif<<', '_or<<', '_orif<<', '_xor<<', '**<<', '**^<<', '*<<', '*^<<', '/<<', '/^<<', '_mod<<', '_div<<', '-<<', '-^<<', '+<<', '+^<<'),
          $._expression),
      ),

    // _if <condition1>
    // _then
    //  <block body>
    // [ _elif <condition2>
    //   _then
    //     <block body> ]
    //     ...
    // [ _else
    //   <block body> ]
    // _endif
    if: $ =>
      seq(alias(/_if/i, '_if'),
        field('condition', $._expression),
        alias(/_then/i, '_then'),
        optional($._codeblock),
        repeat($.elif),
        optional($.else),
        alias(/_endif/i, '_endif'),
      ),

    elif: $ => seq(alias(/_elif/i, '_elif'), field('condition', $._expression), alias(/_then/i, '_then'), optional($._codeblock)),

    else: $ => seq(alias(/_else/i, '_else'), optional($._codeblock)),

    // _loop [ @ <identifier> ]
    //  <block body>
    // _endloop
    throw: $ => prec.left(seq(alias(/_throw/i, '_throw'), $._expression, optional(seq(alias(/_with/i, '_with'), $._expression_list)))),

    // _primitive <number>
    loopbody: $ =>
      seq(
        alias(/_loopbody/i, '_loopbody'),
        '(', $._expression_list, ')',
      ),

    // _leave [ @ <identifier> ] [_with <rvalue tuple> ]
    pragma: $ => prec.left(seq(alias(/_pragma/i, '_pragma'), /(.*)/)),

    string_literal: $ =>
      choice(
        seq('"', repeat(choice(/[^"\n]/, /(.|\n)/)), '"'),
        seq('\'', repeat(choice(/[^'\n]/, /(.|\n)/)), '\''),
      ),

    // /<pattern>/<flags>
    call: $ =>
      prec.right(PREC.CALL,
        seq(
          field('receiver', $._expression),
          field('operator', '.'),
          field('message', $.identifier),
          optional(choice(
            seq('(', optional($._expression_list), ')'),
            seq('<<', optional($._expression_list)))),
        ),
      ),

    invoke: $ => prec.right(PREC.CALL,
      seq(
        field('receiver', $._expression),
        seq('(', optional($._expression_list), ')')),
    ),

    slot_accessor: $ => prec.left(seq('.', /(\|\p{L}[\p{L}\p{N}_?!]*\|)|(\p{L}[\p{L}\p{N}_?!]*)/u)),

    // _scatter is always the last item in a list, whether comma-preceded or
    // not - nothing may follow it, so it can't be folded into a plain
    // repeat() alongside comma-separated items.
    _expression_list: $ =>
      prec.right(seq($._expression, optional(choice(
        seq(',', $._expression_list),
        $.scatter,
      )))),

    true: $ => alias(/_true/i, '_true'),
    false: $ => alias(/_false/i, '_false'),
    maybe: $ => alias(/_maybe/i, '_maybe'),
    unset: $ => alias(/_unset/i, '_unset'),
    _top_level_statement: $ => choice(
      $._definition,
      $._method_declaration,
      $._expression,
      $._global_assignment,
    ),

    _expression: $ => choice(
      $.handling,
      $.return,
      $.leave,
      $.continue,
      $.catch,
      $.throw,
      $.primitive,
      $.block,
      $.iterator,
      $.while,
      $.if,
      $.loop,
      $.try,
      $.loopbody,
      $.protect,
      $.lock,
      choice(
        $.parenthesized_expression,
        $.call,
        $.procedure,
        $.invoke,
        $.slot_accessor,
        $.indexed_access,
        $.gather,
        $.scatter,
        $.allresults,
        $.class,
        $.assignment,
        $.logical_operator,
        $.relational_operator,
        $.arithmetic_operator,
        $.unary_operator,
        $._literal,
        $._variable,
      ),
    ),

    _codeblock: $ => seq(
      choice($._expression, $._defvar),
      repeat(seq($._terminator, choice($._expression, $._defvar))),
      optional($._terminator)),

    global: $ => seq(alias(/_global/i, '_global'), choice($.identifier, $.global_variable, $.dynamic_variable), repeat(seq(',', choice($.identifier, $.global_variable, $.dynamic_variable)))),

    local: $ => prec.left(
      seq(alias(/_local/i, '_local'),
        choice(
          seq('(', seq($.identifier, optional(seq('<<', $._expression))), repeat(seq(',', seq($.identifier, optional(seq('<<', $._expression))))), ')'),
          seq('(', seq($.identifier, optional(seq('<<', $._expression))), repeat(seq(',', seq($.identifier, optional(seq('<<', $._expression))))), seq(optional(','), alias(/_gather/i, '_gather'), seq($.identifier, optional(seq('<<', $._expression)))), ')'),
          seq('(', seq(alias(/_gather/i, '_gather'), $.identifier, optional(seq('<<', $._expression))), ')'),
          seq(seq($.identifier, optional(seq('<<', $._expression))), repeat(seq(',', seq($.identifier, optional(seq('<<', $._expression))))))),
        optional(seq('<<', $._expression)))),

    constant: $ =>
      seq(
        choice(
          alias(/_constant/i, '_constant'),
          seq(alias(/_constant/i, '_constant'), alias(/_local/i, '_local')),
          seq(alias(/_local/i, '_local'), alias(/_constant/i, '_constant'))),
        choice(
          seq('(', $._identifier_list, ')'),
          $._identifier_list),
        seq('<<', $._expression)),

    dynamic: $ => seq(alias(/_dynamic/i, '_dynamic'), $.dynamic_variable, repeat(seq(',', $.dynamic_variable)), optional(seq('<<', $._expression))),

    import: $ => seq(alias(/_import/i, '_import'), $._identifier_list),

    dynamic_import: $ => seq(alias(/_dynamic/i, '_dynamic'), alias(/_import/i, '_import'), $.dynamic_variable, repeat(seq(',', $.dynamic_variable))),

    return: $ =>
      prec.right(
        choice(
          seq(alias(/_return/i, '_return'), optional($._expression_list)),
          seq('>>', $._expression_list),
        ),
      ),

    gather: $ => seq(alias(/_gather/i, '_gather'), $._expression),
    scatter: $ => seq(alias(/_scatter/i, '_scatter'), $._expression),
    allresults: $ => seq(alias(/_allresults/i, '_allresults'), $._expression),

    parenthesized_expression: $ => seq('(', $._expression_list, ')'),

    number: $ => token(
      choice(
        seq(
          choice(/\p{N}+/u, /\p{N}+\.\p{N}+/u),
          optional(seq(/[eE&][+-]?/, /\p{N}+/u))),
        /(?:[2-9]|[1-2]\d|3[0-6])[rR][a-zA-Z0-9]+/)),

    variable: $ => prec.left($._identifier),

    dynamic_variable: $ => token(
      choice(
        seq('!', /[\p{L}\p{N}_?!]+!/u),
        seq(ID_REGEX, ':', '!', /[\p{L}\p{N}_?!]+!/u),
        seq('|', '!', /[\p{L}\p{N}_?!]+/u, '!', '|'),
        seq('|!', /[\p{L}\p{N}_?!]+\|/u, '!'),
        seq('!', /\|[\p{L}\p{N}_?!]*\|/u, '!'),
      ),
    ),

    global_variable: $ => token(seq(ID_REGEX, ':', ID_REGEX)),

    global_reference: $ => token(seq('@', optional(seq(ID_REGEX, ':')), ID_REGEX)),

    identifier: $ => $._identifier,

    _identifier: $ => ID_REGEX,

    _identifier_list: $ =>
      prec.right(seq($.identifier, repeat(seq(',', $.identifier)))),

    relational_operator: $ =>
      prec.right(PREC.RELATIONAL,
        seq(
          field('left', $._expression),
          field('operator', choice(alias(/_is/i, '_is'), alias(/_isnt/i, '_isnt'), alias(/_cf/i, '_cf'), '=', '~=', '<>', '>=', '<=', '<', '>')),
          field('right', $._expression),
        ),
      ),

    unary_operator: $ =>
      prec.right(seq(field('operator', choice('+', '-', alias(/_not/i, '_not'), '~')), $._expression)),

    symbol: $ => /:(\|[^|]*\||\\.|[\p{L}\p{N}_?!]+)+/u,

    documentation: $ => prec.right(repeat1(/##.*/)),
    comment: $ => token(prec(PREC.COMMENT, /#.*/)),
  },
});
