test/corpus/procedure.txt
================================================================================
procedure
================================================================================

_proc(first, second, _optional third, fourth _gather rest)
_endproc
$

--------

(source_file
  (fragment
    (procedure
      (argument)
      (argument)
      (argument)
      (argument)
      (argument))))
