test/corpus/slot_accessor.txt
================================================================================
slot accessor
================================================================================

.slot
$

.slot<< _unset
$

old_slot_value << .slot ^<< _unset
$

.slot.invoke()
$

.garçon
$

--------------------------------------------------------------------------------

(source_file
  (fragment
    (slot_accessor))
  (fragment
    (assignment
      (slot_accessor)
      (unset)))
  (fragment
    (assignment
      (assignment
        (variable)
        (slot_accessor))
      (unset)))
  (fragment
    (call
      (slot_accessor)
      (identifier)))
  (fragment
    (slot_accessor)))
