test/corpus/throw.txt
================================================================================
throw
================================================================================

_throw :error
$

_throw @error
$

_throw "error"
$

_throw :error _with a
$

_throw :error _with a, b
$

_throw :error _with a, b _scatter c
$

--------------------------------------------------------------------------------

(source_file
  (fragment
    (throw
      (symbol)))
  (fragment
    (throw
      (global_reference)))
  (fragment
    (throw
      (string_literal)))
  (fragment
    (throw
      (symbol)
      (variable)))
  (fragment
    (throw
      (symbol)
      (variable)
      (variable)))
  (fragment
    (throw
      (symbol)
      (variable)
      (variable)
      (scatter
        (variable)))))
